# mle-data-case

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/routes/: extract.py
app/schemas/: incident.py
app/services/: extraction.py  llm.py  preprocessing.py  prompts.py
docs/: case.md
tests/: test_e2e.py  test_extract.py  test_health.py  test_llm.py  test_preprocessing.py  test_prompts.py
